# PixelSqueeze

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PUBLISHING.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: main.rs
