[package]
name = "pixelsqueeze"
version = "1.0.0"
edition = "2021"
authors = ["SujalXplores"]
description = "🎨 Squeeze pixels, not quality! Lightning-fast image compression that makes your files smaller while keeping them stunning"
license = "MIT"
repository = "https://github.com/SujalXplores/PixelSqueeze"
keywords = ["image", "compression", "cli", "optimization", "webp"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[[bin]]
name = "pixelsqueeze"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
indicatif = "0.18"
colored = "3.0"
anyhow = "1.0"
walkdir = "2.4"
humansize = "2.1"